# RayTracingWeekend

./: .gitignore  CMakeLists.txt
3rd/: CMakeLists.txt  pch.h
3rd/CLI11/: CMakeLists.txt
3rd/stb/: CMakeLists.txt
include/: aabb.h  bvh_node.h  camera.h  hittable.h  hittable_list.h  interval.h  lambertian.h  material.h  pbr.h  principled.h  principled_brdf.h  ray.h  rtweekend.h  rtweekend_defs.h  sampling.h  sphere.h  vecmath.h
include/materials/: glass.h  lambertian.h  light_mat.h  material.h  pbr.h  principled_brdf.h
include/utils/: auto_timer.h
lib/: CMakeLists.txt  aabb.cpp  sphere.cpp  vecmath.cpp
src/: main.cpp
